--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <table width="80%" align="center" border="0">
   <tr align="center">
-    <td><a href="ferrari.html"><img src="Ferrari.jpg" width="200"></a><br>
+    <td><a href="ferrari.html"><img src="ferrari.jpg" width="200"></a><br>
       <b>Ferrari</b><br>
       รถสปอร์ตจากอิตาลี
     </td>
@@ -52,7 +52,7 @@
     </td>
   </tr>
   <tr align="center">
-    <td><a href="mclaren.html"><img src="McLaren.jpg" width="200"></a><br>
+    <td><a href="mclaren.html"><img src="mclaren.jpg" width="200"></a><br>
       <b>McLaren</b><br>
       รถสปอร์ตจากอังกฤษ
     </td>
@@ -71,4 +71,5 @@
 </footer>
 
 </body>
+
 </html>
