--- a/product.html
+++ b/product.html
@@ -39,7 +39,7 @@
 <table width="80%" align="center" border="0">
   <tr align="center">
     <td>
-      <img src="Ferrari.jpg" width="200"><br>
+     <img src="ferrari.jpg" width="200">
       <b>Ferrari</b><br>
       รถสปอร์ตจากอิตาลี<br>
       <a href="ferrari.html">ดูรายละเอียด</a>
@@ -60,7 +60,7 @@
 
   <tr align="center">
     <td>
-      <img src="McLaren.jpg" width="200"><br>
+      <img src="mclaren.jpg" width="200"><br>
       <b>McLaren</b><br>
       รถสปอร์ตจากอังกฤษ<br>
       <a href="mclaren.html">ดูรายละเอียด</a>
@@ -82,4 +82,5 @@
 </footer>
 
 </body>
+
 </html>
