--- a/ferrari.html
+++ b/ferrari.html
@@ -36,7 +36,7 @@
 <table width="80%" align="center">
   <tr>
     <td align="center">
-      <img src="Ferrari.jpg" width="400"><br><br>
+      <img src="ferrari.jpg" width="400"><br><br>
       <b>Ferrari 488</b>
     </td>
   </tr>
@@ -68,4 +68,5 @@
 </footer>
 
 </body>
+
 </html>
