--- a/mclaren.html
+++ b/mclaren.html
@@ -36,7 +36,7 @@
 <table width="80%" align="center">
   <tr>
     <td align="center">
-      <img src="McLaren.jpg" width="400"><br><br>
+      <img src="mclaren.jpg" width="400"><br><br>
       <b>McLaren 720S</b>
     </td>
   </tr>
@@ -67,4 +67,5 @@
 </footer>
 
 </body>
+
 </html>
