--- a/audi.html
+++ b/audi.html
@@ -36,7 +36,7 @@
 <table width="80%" align="center">
   <tr>
     <td align="center">
-      <img src="Audi.jpg" width="400"><br><br>
+      <img src="audi.jpg" width="400"><br><br>
       <b>Audi R8</b>
     </td>
   </tr>
@@ -68,4 +68,5 @@
 </footer>
 
 </body>
+
 </html>
